Добавлена запись логов